feat: add booking submitted
Co-authored-by: Maxime Simoncelli <maximesimoncelli@users.noreply.github.com>
Co-authored-by: Jean-Marie Collin <jmcollin@users.noreply.github.com>
Co-authored-by: khanhmas <khanhmas@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node -r tsconfig-paths/register src/application/main.ts",
+    "start": "ts-node -r tsconfig-paths/register src/index.ts",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
